// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectTimeline > Snapshot > matches snapshot with all events 1`] = `
<div
  class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10"
>
  <div
    class="flex flex-col space-y-1.5 p-5 pb-0"
  >
    <h3
      class="font-semibold tracking-tight text-lg"
    >
      项目时间线
    </h3>
    <p
      class="text-sm text-slate-400 mt-1"
    >
      显示项目关键事件和变更历史
    </p>
  </div>
  <div
    class="p-5 space-y-4"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="flex-1"
      >
        <div
          class="relative"
        >
          <div
            class="absolute left-3.5 top-1/2 -translate-y-1/2 text-slate-500 pointer-events-none"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
          </div>
          <input
            class="flex w-full h-11 rounded-xl text-sm bg-white/[0.03] border border-white/10 text-white placeholder:text-slate-500 transition-all duration-200 pl-10 pr-4 focus:outline-none focus:border-primary/50 focus:ring-2 focus:ring-primary/20 focus:bg-white/[0.05] hover:border-white/20 hover:bg-white/[0.04] disabled:opacity-50 disabled:cursor-not-allowed"
            placeholder="搜索事件..."
            value=""
          />
        </div>
      </div>
      <div
        class="flex items-center gap-1 rounded-lg bg-white/5 p-1"
      >
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 bg-gradient-to-r from-violet-600 to-indigo-600 text-white shadow-lg shadow-violet-500/25 hover:shadow-violet-500/40 hover:scale-[1.02] active:scale-[0.98] h-8 px-3 text-xs"
        >
          全部
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          阶段变更
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          状态变更
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          健康度变更
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          里程碑
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          文档
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          其他
        </button>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="absolute left-5 top-0 bottom-0 w-0.5 bg-white/10"
      />
      <div
        class="space-y-4"
      >
        <div
          class="relative flex gap-4"
          style="opacity: 0; transform: translateX(-20px);"
        >
          <div
            class="relative z-10 w-10 h-10 rounded-full flex items-center justify-center bg-gradient-to-br from-primary/20 to-indigo-500/10 border-2 border-primary/30 shadow-lg shadow-primary/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check h-5 w-5 text-emerald-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </div>
          <div
            class="flex-1 pb-4"
          >
            <div
              class="p-4 rounded-xl bg-white/[0.03] border border-white/5 hover:bg-white/[0.05] transition-colors"
            >
              <div
                class="flex items-start justify-between mb-2"
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="font-medium text-white mb-1"
                  >
                    设计评审
                  </div>
                  <div
                    class="text-sm text-slate-400"
                  >
                    设计方案评审
                  </div>
                </div>
                <span
                  class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium transition-colors bg-white/5 text-slate-400 border border-white/10"
                >
                  里程碑
                </span>
              </div>
              <div
                class="flex items-center gap-4 mt-3 text-xs text-slate-500"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-calendar h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 2v4"
                    />
                    <path
                      d="M16 2v4"
                    />
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="4"
                    />
                    <path
                      d="M3 10h18"
                    />
                  </svg>
                  <span>
                    2024/01/30
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="relative flex gap-4"
          style="opacity: 0; transform: translateX(-20px);"
        >
          <div
            class="relative z-10 w-10 h-10 rounded-full flex items-center justify-center bg-gradient-to-br from-primary/20 to-indigo-500/10 border-2 border-primary/30 shadow-lg shadow-primary/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-triangle-alert h-5 w-5 text-red-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
          <div
            class="flex-1 pb-4"
          >
            <div
              class="p-4 rounded-xl bg-white/[0.03] border border-white/5 hover:bg-white/[0.05] transition-colors"
            >
              <div
                class="flex items-start justify-between mb-2"
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="font-medium text-white mb-1"
                  >
                    健康度变更: 良好 → 警告
                  </div>
                  <div
                    class="text-sm text-slate-400"
                  >
                    进度延迟
                  </div>
                </div>
                <span
                  class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium transition-colors bg-white/5 text-slate-400 border border-white/10"
                >
                  健康度变更
                </span>
              </div>
              <div
                class="flex items-center gap-4 mt-3 text-xs text-slate-500"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-calendar h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 2v4"
                    />
                    <path
                      d="M16 2v4"
                    />
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="4"
                    />
                    <path
                      d="M3 10h18"
                    />
                  </svg>
                  <span>
                    2024/01/25
                  </span>
                </div>
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-user h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                    />
                    <circle
                      cx="12"
                      cy="7"
                      r="4"
                    />
                  </svg>
                  <span>
                    王五
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="relative flex gap-4"
          style="opacity: 0; transform: translateX(-20px);"
        >
          <div
            class="relative z-10 w-10 h-10 rounded-full flex items-center justify-center bg-gradient-to-br from-primary/20 to-indigo-500/10 border-2 border-primary/30 shadow-lg shadow-primary/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-5 w-5 text-amber-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </div>
          <div
            class="flex-1 pb-4"
          >
            <div
              class="p-4 rounded-xl bg-white/[0.03] border border-white/5 hover:bg-white/[0.05] transition-colors"
            >
              <div
                class="flex items-start justify-between mb-2"
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="font-medium text-white mb-1"
                  >
                    状态变更: 进行中 → 已完成
                  </div>
                  <div
                    class="text-sm text-slate-400"
                  >
                    阶段完成
                  </div>
                </div>
                <span
                  class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium transition-colors bg-white/5 text-slate-400 border border-white/10"
                >
                  状态变更
                </span>
              </div>
              <div
                class="flex items-center gap-4 mt-3 text-xs text-slate-500"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-calendar h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 2v4"
                    />
                    <path
                      d="M16 2v4"
                    />
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="4"
                    />
                    <path
                      d="M3 10h18"
                    />
                  </svg>
                  <span>
                    2024/01/20
                  </span>
                </div>
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-user h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                    />
                    <circle
                      cx="12"
                      cy="7"
                      r="4"
                    />
                  </svg>
                  <span>
                    李四
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="relative flex gap-4"
          style="opacity: 0; transform: translateX(-20px);"
        >
          <div
            class="relative z-10 w-10 h-10 rounded-full flex items-center justify-center bg-gradient-to-br from-primary/20 to-indigo-500/10 border-2 border-primary/30 shadow-lg shadow-primary/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right h-5 w-5 text-blue-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </div>
          <div
            class="flex-1 pb-4"
          >
            <div
              class="p-4 rounded-xl bg-white/[0.03] border border-white/5 hover:bg-white/[0.05] transition-colors"
            >
              <div
                class="flex items-start justify-between mb-2"
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="font-medium text-white mb-1"
                  >
                    阶段变更: 需求分析 → 设计
                  </div>
                  <div
                    class="text-sm text-slate-400"
                  >
                    进入设计阶段
                  </div>
                </div>
                <span
                  class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium transition-colors bg-white/5 text-slate-400 border border-white/10"
                >
                  阶段变更
                </span>
              </div>
              <div
                class="flex items-center gap-4 mt-3 text-xs text-slate-500"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-calendar h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 2v4"
                    />
                    <path
                      d="M16 2v4"
                    />
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="4"
                    />
                    <path
                      d="M3 10h18"
                    />
                  </svg>
                  <span>
                    2024/01/15
                  </span>
                </div>
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-user h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                    />
                    <circle
                      cx="12"
                      cy="7"
                      r="4"
                    />
                  </svg>
                  <span>
                    张三
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="relative flex gap-4"
          style="opacity: 0; transform: translateX(-20px);"
        >
          <div
            class="relative z-10 w-10 h-10 rounded-full flex items-center justify-center bg-gradient-to-br from-primary/20 to-indigo-500/10 border-2 border-primary/30 shadow-lg shadow-primary/20"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check h-5 w-5 text-emerald-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </div>
          <div
            class="flex-1 pb-4"
          >
            <div
              class="p-4 rounded-xl bg-white/[0.03] border border-white/5 hover:bg-white/[0.05] transition-colors"
            >
              <div
                class="flex items-start justify-between mb-2"
              >
                <div
                  class="flex-1"
                >
                  <div
                    class="font-medium text-white mb-1"
                  >
                    需求评审完成
                  </div>
                  <div
                    class="text-sm text-slate-400"
                  >
                    完成需求文档评审
                  </div>
                </div>
                <span
                  class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium transition-colors bg-white/5 text-slate-400 border border-white/10"
                >
                  里程碑
                </span>
              </div>
              <div
                class="flex items-center gap-4 mt-3 text-xs text-slate-500"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-calendar h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 2v4"
                    />
                    <path
                      d="M16 2v4"
                    />
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="4"
                    />
                    <path
                      d="M3 10h18"
                    />
                  </svg>
                  <span>
                    2024/01/10
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectTimeline > Snapshot > matches snapshot with empty data 1`] = `
<div
  class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10"
>
  <div
    class="flex flex-col space-y-1.5 p-5 pb-0"
  >
    <h3
      class="font-semibold tracking-tight text-lg"
    >
      项目时间线
    </h3>
    <p
      class="text-sm text-slate-400 mt-1"
    >
      显示项目关键事件和变更历史
    </p>
  </div>
  <div
    class="p-5 space-y-4"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="flex-1"
      >
        <div
          class="relative"
        >
          <div
            class="absolute left-3.5 top-1/2 -translate-y-1/2 text-slate-500 pointer-events-none"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
          </div>
          <input
            class="flex w-full h-11 rounded-xl text-sm bg-white/[0.03] border border-white/10 text-white placeholder:text-slate-500 transition-all duration-200 pl-10 pr-4 focus:outline-none focus:border-primary/50 focus:ring-2 focus:ring-primary/20 focus:bg-white/[0.05] hover:border-white/20 hover:bg-white/[0.04] disabled:opacity-50 disabled:cursor-not-allowed"
            placeholder="搜索事件..."
            value=""
          />
        </div>
      </div>
      <div
        class="flex items-center gap-1 rounded-lg bg-white/5 p-1"
      >
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 bg-gradient-to-r from-violet-600 to-indigo-600 text-white shadow-lg shadow-violet-500/25 hover:shadow-violet-500/40 hover:scale-[1.02] active:scale-[0.98] h-8 px-3 text-xs"
        >
          全部
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          阶段变更
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          状态变更
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          健康度变更
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          里程碑
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          文档
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white hover:bg-white/[0.05] h-8 px-3 text-xs"
        >
          其他
        </button>
      </div>
    </div>
    <div
      class="text-center py-12 text-slate-400"
    >
      <p>
        暂无事件记录
      </p>
    </div>
  </div>
</div>
`;
